# dipcm

./: Cargo.toml
src/: main.rs
wapic/: Cargo.toml  read.txt
wapic/src/: main.rs
