[package]
name = "wapic"
version = "0.1.0"
authors = ["Noah Lanson <lanson.noah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.40"
reqwest = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
text_io = "0.1.8"